--- a/components/Header/_Header.module.scss
+++ b/components/Header/_Header.module.scss
@@ -7,3 +7,25 @@
     place-content: center;
     place-items: center;
 }
+
+.drawerWrapper {
+    width: 100%;
+    height: 100vh;
+    z-index: 1;
+}
+
+.customDrawer {
+    position: absolute;
+    height: calc(100vh - 64px);
+    width: 38rem;
+    background-color: #ffff;
+    padding: 16px;
+    z-index: 50;
+    left: -80px;
+    animation: slide 0.15s linear forwards;
+}
+
+@keyframes slide {
+    0% {}
+    100% { transform: translatex(80px);}
+}
