--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -11,6 +11,7 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-size: 62.5%;
   height: 100vh;
+  color: #4F555B;
 }
 
 .swiper-pagination-bullet {
@@ -45,6 +46,32 @@ body {
   bottom: 0;
 }
 
-.ant-input-affix-wrapper {
-  border-color: #BD0029;
+.ant-checkbox-group-item {
+  display: block;
+  margin-right: 0;
+}
+
+.ant-collapse, 
+.ant-collapse-item-active, 
+.ant-collapse-header 
+.ant-collapse-content-box
+{
+  border: none;
+}
+
+.ant-collapse-header {
+  background-color: #ffff;
+}
+
+.ant-checkbox {
+  display: inline-block
+}
+
+.ant-checkbox-checked .ant-checkbox-inner {
+  background-color: #BD0029;
+  // border-color: #BD0029 !important;
+}
+
+.ant-input {
+  text-align: right;
 }
