Fixed checkout UI

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -14,18 +14,19 @@ body {
   color: #4F555B;
 }
 
-.swiper-pagination-bullet {
-  background-color: #575656 !important;
-  border-radius: 0 !important;
-  width: 4.8rem !important;
-  height: 0.4rem !important;
+.MuiStepLabel-labelContainer span {
+  font-size: 16px;
 }
 
-.swiper-pagination-bullet-active {
-  background-color: #BD0029 !important;
-  border-radius: 0 !important;
-  width: 4.8rem !important;
-  height: 0.4rem !important;
+.MuiStepLabel-iconContainer {
+  .MuiSvgIcon-root {
+    width: 24px;
+    height: 24px;
+
+    .MuiStepIcon-text {
+      font-size: 16px;
+    }
+  }
 }
 
 .ant-drawer-header {
@@ -45,30 +46,3 @@ body {
   position: absolute;
   bottom: 0;
 }
-
-.ant-checkbox-group-item {
-  display: block;
-  margin-right: 0;
-}
-
-.ant-collapse, 
-.ant-collapse-item-active, 
-.ant-collapse-header 
-.ant-collapse-content-box
-{
-  border: none;
-}
-
-.ant-collapse-header {
-  background-color: #ffff;
-}
-
-.ant-checkbox {
-  display: inline-block
-}
-
-.ant-checkbox-checked .ant-checkbox-inner {
-  background-color: #BD0029;
-  // border-color: #BD0029 !important;
-}
-
