--- a/styles/_index.module.scss
+++ b/styles/_index.module.scss
@@ -7,8 +7,8 @@
         display: flex;
         place-content: center;
         text-align: center;
-        width: 49.7rem;
-        height: 52.8rem;
+        width: 497px;
+        height: 500px;
         position: sticky;
         top: 5rem;
         align-self: flex-start;
